--- a/app/src/main/res/layout/fragment_create_post.xml
+++ b/app/src/main/res/layout/fragment_create_post.xml
@@ -81,7 +81,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/postDescriptionContainer"
+        android:background="@drawable/register_rounded_button"
         android:layout_alignParentLeft="true"
+        android:textColor="@color/colorWhite"
         android:layout_alignParentStart="true"
         android:layout_marginTop="32dp"
         android:layout_marginLeft="16dp"
