--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -15,7 +15,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginStart="111dp"
         android:layout_marginLeft="111dp"
-        android:layout_marginTop="39dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="111dp"
         android:layout_marginRight="111dp"
         android:ems="10"
@@ -70,10 +70,10 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="111dp"
         android:layout_marginRight="111dp"
+        android:digits="0123456789"
         android:ems="10"
         android:hint="@string/phone_number_hint"
         android:inputType="phone"
-        android:digits="0123456789"
         android:maxLength="10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,12 +85,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="135dp"
         android:layout_marginLeft="135dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="136dp"
         android:layout_marginRight="136dp"
         android:text="@string/academic_status_tv"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/phoneNumberET" />
 
@@ -100,7 +101,7 @@
         android:layout_height="40dp"
         android:layout_marginStart="111dp"
         android:layout_marginLeft="111dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="111dp"
         android:layout_marginRight="111dp"
         android:spinnerMode="dropdown"
@@ -114,13 +115,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="111dp"
         android:layout_marginLeft="111dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="44dp"
         android:layout_marginEnd="111dp"
         android:layout_marginRight="111dp"
         android:ems="10"
         android:hint="@string/register_password_hint"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
@@ -130,13 +132,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="111dp"
         android:layout_marginLeft="111dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="56dp"
         android:layout_marginEnd="111dp"
         android:layout_marginRight="111dp"
         android:ems="10"
         android:hint="@string/register_confirm_password_hint"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordET" />
 
@@ -144,17 +147,12 @@
         android:id="@+id/submitBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="217dp"
-        android:layout_marginLeft="217dp"
-        android:layout_marginTop="110dp"
-        android:layout_marginEnd="217dp"
-        android:layout_marginRight="217dp"
-        android:layout_marginBottom="196dp"
         android:text="@string/submit_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/confirmNewPasswordET" />
+        app:layout_constraintTop_toBottomOf="@+id/confirmNewPasswordET"
+        app:layout_constraintVertical_bias="0.364" />
 
     <ProgressBar
         android:id="@+id/progress_circular"
