--- a/app/src/main/res/layout/fragment_create_group.xml
+++ b/app/src/main/res/layout/fragment_create_group.xml
@@ -89,6 +89,8 @@
         android:layout_marginEnd="162dp"
         android:layout_marginRight="162dp"
         android:layout_marginBottom="342dp"
+        android:background="@drawable/register_rounded_button"
+        android:textColor="@color/colorWhite"
         android:gravity="center"
         android:text="@string/done_button"
         app:layout_constraintBottom_toBottomOf="parent"
