--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -48,8 +48,9 @@
         android:layout_alignRight="@id/passwordET"
         android:layout_above="@id/loginBtn"
         android:layout_marginBottom="32dp"
+        android:background="@drawable/register_rounded_button"
         android:text="@string/forgot_password_button"
-        android:textColor="@color/colorBlack"
+        android:textColor="@color/colorWhite"
         tools:layout_editor_absoluteX="203dp"
         tools:layout_editor_absoluteY="267dp" />
 
@@ -83,7 +84,7 @@
         android:id="@+id/registerBtn"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:background="@drawable/register_rounded_button"
+        android:background="@drawable/login_rounded_button"
         android:text="@string/register_button"
         android:textColor="@color/colorWhite"
         android:layout_alignParentBottom="true"
