--- a/app/src/main/res/layout/fragment_my_groups_post_item.xml
+++ b/app/src/main/res/layout/fragment_my_groups_post_item.xml
@@ -21,10 +21,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/text_margin"
             android:layout_marginLeft="@dimen/text_margin"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:layout_marginTop="4dp"
-            android:text="2020 May 25"/>
+            android:text="2020 May 25" />
 
         <TextView
             android:id="@+id/postCreatorNameTV"
@@ -33,11 +33,11 @@
             android:layout_below="@+id/postDateTV"
             android:layout_marginStart="@dimen/text_margin"
             android:layout_marginLeft="@dimen/text_margin"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:layout_marginTop="4dp"
-            android:textAppearance="?attr/textAppearanceListItem"
-            android:text="Kamo Kamo" />
+            android:text="Kamo Kamo"
+            android:textAppearance="?attr/textAppearanceListItem" />
 
         <TextView
             android:id="@+id/postSubjectTV"
@@ -46,9 +46,9 @@
             android:layout_below="@+id/postCreatorNameTV"
             android:layout_marginStart="@dimen/text_margin"
             android:layout_marginLeft="@dimen/text_margin"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:layout_marginTop="4dp"
             android:text="subject" />
 
 
@@ -59,9 +59,9 @@
             android:layout_below="@+id/postSubjectTV"
             android:layout_marginStart="@dimen/text_margin"
             android:layout_marginLeft="@dimen/text_margin"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
             android:autoLink="web"
             android:linksClickable="true"
@@ -72,25 +72,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/postDescriptionTV"
-            android:src="@drawable/ic_thumb_up"
-            android:background="@color/colorWhite"
             android:layout_marginStart="@dimen/text_margin"
             android:layout_marginLeft="@dimen/text_margin"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="4dp"
-            android:contentDescription="like post" />
+            android:background="@color/colorWhite"
+            android:contentDescription="like post"
+            android:src="@drawable/ic_thumb_up" />
 
         <TextView
             android:id="@+id/postLikesCountTV"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:layout_below="@+id/postDescriptionTV"
-            android:layout_toRightOf="@+id/postLikeBtn"
-            android:layout_toEndOf="@+id/postLikeBtn"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="4dp"
+            android:layout_toEndOf="@+id/postLikeBtn"
+            android:layout_toRightOf="@+id/postLikeBtn"
             android:text="100" />
 
 
@@ -99,27 +99,27 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/postDescriptionTV"
-            android:layout_toRightOf="@+id/postLikesCountTV"
-            android:layout_toEndOf="@+id/postLikesCountTV"
-            android:src="@drawable/ic_insert_comment"
-            android:background="@color/colorWhite"
             android:layout_marginStart="20dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="4dp"
-            android:contentDescription="comment about post" />
+            android:layout_toEndOf="@+id/postLikesCountTV"
+            android:layout_toRightOf="@+id/postLikesCountTV"
+            android:background="@color/colorWhite"
+            android:contentDescription="comment about post"
+            android:src="@drawable/ic_insert_comment" />
 
         <TextView
             android:id="@+id/postCommentsCountTV"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:layout_below="@+id/postDescriptionTV"
-            android:layout_toRightOf="@+id/postCommentBtn"
-            android:layout_toEndOf="@+id/postCommentBtn"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="4dp"
+            android:layout_toEndOf="@+id/postCommentBtn"
+            android:layout_toRightOf="@+id/postCommentBtn"
             android:text="50" />
 
 
@@ -132,8 +132,8 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
-            android:drawableLeft="@drawable/ic_insert_comment"
             android:drawableStart="@drawable/ic_insert_comment"
+            android:drawableLeft="@drawable/ic_insert_comment"
             android:text="comments" />
 
 
