added functionality to be able to share the group invite code

--- a/app/src/main/res/layout/fragment_my_groups_post_item.xml
+++ b/app/src/main/res/layout/fragment_my_groups_post_item.xml
@@ -127,7 +127,8 @@
             android:id="@+id/commentBtn"
             android:layout_width="135dp"
             android:layout_height="45dp"
-            android:layout_below="@+id/postLikeBtn"
+            android:layout_below="@+id/postDescriptionTV"
+            android:layout_alignRight="@id/postDescriptionTV"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="4dp"
