fixing broken files

--- a/app/src/main/res/layout/fragment_available_groups_item_list.xml
+++ b/app/src/main/res/layout/fragment_available_groups_item_list.xml
@@ -9,7 +9,7 @@
 <androidx.recyclerview.widget.RecyclerView
 
     android:id="@+id/availableGroupsList"
-    android:name="com.example.gradshubclone.ExploreGroupsFragment"
+    android:name="com.example.gradshub.AvailableGroupsListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
