added functionality for viewing conference schedules

--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -31,6 +31,11 @@
             android:id="@+id/availableGroupsListFragment"
             android:icon="@drawable/ic_search"
             android:title="@string/menu_exploreGroup" />
+
+        <item
+            android:id="@+id/scheduleFragment"
+            android:icon="@drawable/ic_schedule"
+            android:title="Schedule" />
     </group>
 
 </menu>
