--- a/app/src/main/res/layout/fragment_schedule_item_list.xml
+++ b/app/src/main/res/layout/fragment_schedule_item_list.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent" >
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/myGroupsList"
+        android:id="@+id/scheduleList"
         android:name="com.example.gradshub.ScheduleListFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -16,13 +16,6 @@
         app:layoutManager="LinearLayoutManager"
         tools:context=".main.conferenceupdates.ScheduleListFragment"
         tools:listitem="@layout/fragment_schedule_item" />
-
-    <ProgressBar
-        android:id="@+id/progress_circular"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="gone" />
 
 </RelativeLayout>
 
