--- a/app/src/main/res/layout/fragment_create_group.xml
+++ b/app/src/main/res/layout/fragment_create_group.xml
@@ -12,13 +12,15 @@
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/groupNameContainer"
-            android:layout_width="390dp"
-            android:layout_height="61dp"
+            android:layout_width="353dp"
+            android:layout_height="96dp"
             app:counterEnabled="true"
             app:counterMaxLength="50"
             app:errorEnabled="true"
@@ -31,7 +33,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/groupNameET"
                 android:layout_width="398dp"
-                android:layout_height="36dp"
+                android:layout_height="57dp"
                 android:hint="@string/enter_group_name" />
             <!--android:maxLength="50"-->
         </com.google.android.material.textfield.TextInputLayout>
@@ -39,8 +41,8 @@
 
         <TextView
             android:id="@+id/groupVisibilityTV"
-            android:layout_width="237dp"
-            android:layout_height="49dp"
+            android:layout_width="178dp"
+            android:layout_height="68dp"
             android:layout_marginTop="81dp"
             android:layout_marginEnd="12dp"
             android:layout_marginRight="12dp"
@@ -48,7 +50,7 @@
             android:paddingLeft="32dp"
             android:text="@string/select_group_visibility"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            app:layout_constraintBottom_toTopOf="@+id/doneBtn"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/radioGroup"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -57,8 +59,8 @@
 
         <RadioGroup
             android:id="@+id/radioGroup"
-            android:layout_width="150dp"
-            android:layout_height="46dp"
+            android:layout_width="154dp"
+            android:layout_height="27dp"
             android:layout_marginStart="12dp"
             android:layout_marginLeft="12dp"
             android:layout_marginTop="81dp"
@@ -87,17 +89,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="81dp"
-            android:layout_marginBottom="342dp"
             android:background="@drawable/register_rounded_button"
             android:gravity="center"
             android:text="@string/done_button"
             android:textColor="@color/colorWhite"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintHorizontal_bias="0.544"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/radioGroup"
-            app:layout_constraintVertical_bias="0.18" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <ProgressBar
             android:id="@+id/progress_circular"
